@@ -23,7 +23,7 @@
 #include <common/qt/gui/base/table_item.h>   // for TableItem
 #include <common/qt/gui/base/table_model.h>  // for TableModel
 
-#include "core/ps_channel.h"
+#include "core/db_ps_channel.h"
 
 namespace fastonosql {
 namespace gui {
